src/objects/Program_Budget__c.object
<CustomObject>
    <description>Level 2 of the budgeting and planning hierarchy</description>
    <fields>
        <fullName>Budget_Area__c</fullName>
        <label>Budget Area</label>
        <picklist>
            <picklistValues>
                <fullName>Generica Area 1 (Update)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generica Area 2 (Update)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generica Area 3 (Update)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Owner_Amount_Remaining__c</fullName>
        <formula>Budget_Owner__r.Unallocated_Program_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Owner Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Owner_Amount__c</fullName>
        <formula>Budget_Owner__r.Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Owner Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Owner__c</fullName>
        <label>Parent Budget</label>
        <referenceTo>Budgets__c</referenceTo>
        <relationshipLabel>Program Budgets (Level 2)</relationshipLabel>
        <relationshipName>Program_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contingency_Amounts__c</fullName>
        <label>Contingency Amounts</label>
        <summarizedField>Budget_Line__c.Budget_Line_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Line__c.Budget_Type__c</field>
            <operation>equals</operation>
            <value>Contingency</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Budget_Line__c.Budget_Line_Amount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Line__c.Program_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contractor_Budget_Amount__c</fullName>
        <label>Contractor Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Contractors__c</fullName>
        <label>Number of Contractors</label>
        <summaryFilterItems>
            <field>Budget_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contractor Spend</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Line__c.Program_Budget__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Program_Budget_Amount__c</fullName>
        <label>Program Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Budget_External__c</fullName>
        <externalId>true</externalId>
        <label>Program Budget External</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Owner__c</fullName>
        <label>Program Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <controllingField>Budget_Area__c</controllingField>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books/Brochures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding/Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Budget__c</fullName>
        <label>Proposed Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region DO NOT USE</label>
        <picklist>
            <picklistValues>
                <fullName>US/Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L. America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Budget_Lines__c</fullName>
        <label>Rollup of Budget Lines</label>
        <summarizedField>Budget_Line__c.Budget_Line_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Line__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Line__c.Program_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Contractor_Budget_Lines__c</fullName>
        <label>Rollup of Contractor Budget Lines</label>
        <summarizedField>Budget_Line__c.Contractor_Budget_Amount__c</summarizedField>
        <summaryForeignKey>Budget_Line__c.Program_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Purchase_Request_Amount__c</fullName>
        <label>Rollup of Purchase Request Amount</label>
        <summarizedField>Budget_Line__c.Rollup_of_Purchase_Request_Amount__c</summarizedField>
        <summaryForeignKey>Budget_Line__c.Program_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Unapproved_Budget_Lines__c</fullName>
        <label>Rollup of Unapproved Budget Lines</label>
        <summarizedField>Budget_Line__c.Budget_Line_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Line__c.Program_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_of_Uncommitted_Approved_Budget__c</fullName>
        <label>Rollup of Uncommitted Approved Budget</label>
        <summarizedField>Budget_Line__c.Uncommitted_Approved_Budget__c</summarizedField>
        <summaryForeignKey>Budget_Line__c.Program_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <inlineHelpText>If filled in, this short name will be added to the end of the Program Budget name</inlineHelpText>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unallocated_Budget_Line_Amount__c</fullName>
        <formula>Program_Budget_Amount__c - ( Rollup_of_Budget_Lines__c +  Rollup_of_Unapproved_Budget_Lines__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Budget Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uncommitted_Approved_Budget_Remaining__c</fullName>
        <formula>Program_Budget_Amount__c -   Rollup_of_Purchase_Request_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncommitted Approved Budget Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Program Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Program_Type__c</columns>
        <columns>Budget_Owner__c</columns>
        <columns>Program_Budget_Amount__c</columns>
        <columns>Proposed_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Budgets</pluralLabel>
    <recordTypes>
        <fullName>Contractor_Spend</fullName>
        <active>false</active>
        <label>Contractor Spend</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Spend</fullName>
        <active>true</active>
        <label>Program Spend</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Program_budget_cannot_be_less_than_bls</fullName>
        <active>true</active>
        <errorConditionFormula>Program_Budget_Amount__c &lt;  (Rollup_of_Unapproved_Budget_Lines__c +  Rollup_of_Budget_Lines__c )</errorConditionFormula>
        <errorDisplayField>Program_Budget_Amount__c</errorDisplayField>
        <errorMessage>The program budget cannot be less than the sum of the budget line amounts.  First, reduce a budget line then reduce the program budget</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_budget_cannot_exceed_Level1</fullName>
        <active>true</active>
        <errorConditionFormula>OR((Budget_Owner__r.Rollup_of_Program_Budget_Amount__c  - PRIORVALUE( Program_Budget_Amount__c ) +  Program_Budget_Amount__c &gt; Budget_Owner_Amount__c),AND(ISNEW(),Budget_Owner__r.Rollup_of_Program_Budget_Amount__c +Program_Budget_Amount__c &gt;Budget_Owner_Amount__c))</errorConditionFormula>
        <errorDisplayField>Program_Budget_Amount__c</errorDisplayField>
        <errorMessage>The Total program budget exceeds the Level1 Budget.  You cannot make this change to the Program.  Please reduce another Program before increasing this program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RT_must_match_parent</fullName>
        <active>true</active>
        <description>OR(AND(CONTAINS( Budget_Owner__c , &quot;Contractor&quot;), CONTAINS( $RecordType.Name  , &quot;Program&quot;)),AND(CONTAINS( Budget_Owner__c , &quot;Program&quot;), CONTAINS( $RecordType.Name  , &quot;Contractor&quot;)))</description>
        <errorConditionFormula>AND(CONTAINS( Budget_Owner__c , &quot;Contractor&quot;), $RecordType.Name  = &quot;Program Spend&quot;)</errorConditionFormula>
        <errorMessage>Program Record Type must match the Budget Record Type</errorMessage>
    </validationRules>
</CustomObject>